# jpc

./: .gitmodules  CMakeLists.txt
include/: jpc.hpp
include/jpc/detail/: apply.hpp  invoke.hpp
test/: CMakeLists.txt  intro.cpp  intro.pb.cc  intro.pb.h  intro.proto
